# KeyHaven

./: Cargo.toml  LICENSE  README.md
doc/: README.md
doc/daemon/: daemon-pt-br.md
doc/database/: schema-reference.md
docs/: README.md  cli.md  daemon-pt-br.md  daemon.md  how-it-works-pt-br.md  how-it-works.md
docs/cli/: cli-pt-br.md
docs/daemon/: daemon.md
docs/database/: README.md  database.md
docs/desktop/: desktop-app.md  desktop-architecture.md  desktop-backend.md  desktop-frontend.md
test/: .dockerignore  Dockerfile.cli  Dockerfile.daemon  Makefile  README-pt-br.md  README.md  docker-compose.yml  keyhaven.sh
vault-cli/: Cargo.toml
vault-cli/ascii/: art.json  cover.json
vault-cli/src/: ascii.rs  main.rs  session.rs
vault-cli/src/cli/: mod.rs
vault-cli/src/commands/: add.rs  check.rs  gen.rs  get.rs  init.rs  list.rs  lock.rs  mod.rs  rofi.rs  unlock.rs
vault-core/: Cargo.toml
vault-core/src/: crypto.rs  generator.rs  lib.rs  matcher.rs  store.rs
vault-daemon/: 001_initial.sql  Cargo.toml  Config.example.toml
vault-daemon/src/: config.rs  main.rs  protocol.rs  router.rs  session.rs
vault-desktop/: index.html  package.json  vite.config.ts
vault-desktop/src/: App.tsx  styles.css
vault-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vault-desktop/src-tauri/src/: main.rs  state.rs
vault-desktop/src-tauri/src/commands/: entries.rs  generator.rs  mod.rs  vault.rs
vault-desktop/src/api/: entries.ts  generator.ts  index.ts  vault.ts
vault-desktop/src/components/: EntryForm.tsx  EntryList.tsx  PasswordGenerator.tsx  index.ts
vault-desktop/src/pages/: SetupPage.tsx  UnlockPage.tsx  VaultPage.tsx
