[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keyhaven"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
