[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keyhaven"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "color"] }
rpassword = "7"
comfy-table = "7"
indicatif = "0.17"
colored = "2"
reqwest = { version = "0.12", features = ["json"] }
sha1 = "0.10"
hex = "0.4"
zeroize = { workspace = true }
chrono = "0.4"
dirs = "5"
humantime = "2"
