[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keyhaven"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "color"] }
rpassword = "7"
comfy-table = "7"
indicatif = "0.17"
colored = "2"
reqwest = { version = "0.12", features = ["json"] }
sha1 = "0.10"
hex = "0.4"
zeroize = "1"
chrono = "0.4"
dirs = "5"
humantime = "2"
terminal_size = "0.4"
