[package]
name = "vault-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "vault_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
sqlx = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
